--- a/resource/exe_computResult/config.ini
+++ b/resource/exe_computResult/config.ini
@@ -1,6 +1,6 @@
 [common_set]
 #待处理文件所在文件夹，该文件夹下可包含多个文件夹
-Log_Folder=C:\Users\Administrator\Desktop\性能测试工具\mtrec性能数据统计工具\results
+Log_Folder=C:\Users\Administrator\Desktop\性能测试工具\AutoComputResult\resource\exe_computResult\test
 
 #log文件的配置
 [log_set]
@@ -20,14 +20,14 @@ StartSubLines=10
 EndSubLines=10
 
 #CPU值所在列的序号，从1开始,若不统计该值填写-1即可
-CPU_Column=2
+CPU_Column=7
 
 #物理内存所在列的序号，从1开始，若不统计该值填写-1即可
 PhysicalMemory_Column=6
 
 #虚拟内存所在列的序号，从1开始，若不统计该值填写-1即可
-VirtualMemory_Column=8
+VirtualMemory_Column=5
 
 #Cpu核数
-Cpu_Core=16
+Cpu_Core=8
 
